k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gameide-prod
  labels:
    name: gameide-prod
    environment: production
    app: gameide
